# Virtual-Library-Management-System-VLMS-Project

./: CMakeLists.txt  Git Commands Used.md  README.md  Role Assignment - Week 2.docx  VLMS Overview.md  VLMS_Testing_Guide.md  VLMSv3  VLMSv4  Virtual Library Management System (VLMS) Project Overview.docx  book.cpp  book.h  bookDatabase.cpp  bookDatabase.h  bst.cpp  bst.h  functions copy.cpp  functions.cpp  functions.h  libraryOperations.cpp  libraryOperations.h  main.cpp  menu.cpp  menu.h  queue.cpp  queue.h  testing.cpp  user.cpp  user.h  userManagement.cpp  userManagement.h  utility.cpp  utility.h  vlms
Book Management/Initial Code/: functions copy.cpp
Book Management/Initial Code/database/: admin_users.txt  user_data.txt
Git Documentation/: Git_Documentation.md
Information/: Git Commands History.md  Git Commands Used.md  Git Commands.md  Role Assignment - Week 2.docx  Tasks and Assignments - Project Plan - Week 4.pod
Testing/End to End Testing/Version 1/: Version 1 Testing by Fadi Kanana.md
Testing/End to End Testing/Version 2/: Version 2 Testing by Fadi Kanana.md
Testing/Unit Testing/Book Management Unit Test/: functions.cpp  functions.h  main.cpp
Testing/Unit Testing/User Account Management Unit Test/: Project.cpp
database/: admin_users.txt  book_database.txt  users.txt
database/temp_file/: user_data.txt
docs/: user_manual.md
